--- a/courses.html
+++ b/courses.html
@@ -36,8 +36,8 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-2.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <img src="images/pic-1.jpg" class="image" alt="">
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -63,8 +63,8 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-2.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <img src="images/pic-1.jpg" class="image" alt="">
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
@@ -89,7 +89,7 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-5.jpg" alt="">
             <div class="info">
                <h3>Snehal</h3>
                <span>21-02-2024</span>
@@ -234,7 +234,7 @@
 </section>
 
 <footer class="footer">
-   &copy; copyright @ 2024 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2024 by <span>Naman Jain</span> | all rights reserved!
 </footer>
 
 <script src="js/script.js"></script>
