--- a/login.html
+++ b/login.html
@@ -34,8 +34,8 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-2.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <img src="images/pic-1.jpg" class="image" alt="">
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -55,8 +55,8 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-2.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <img src="images/pic-1.jpg" class="image" alt="">
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">View Profile</a>
    </div>
@@ -88,7 +88,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2024 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2024 by <span>Naman Jain</span> | all rights reserved!
 
 </footer>
 
