--- a/monkeytype.html
+++ b/monkeytype.html
@@ -29,8 +29,8 @@
         </div>
 
         <div class="profile">
-          <img src="images/pic-2.jpg" class="image" alt="" />
-          <h3 class="name">Nancy Sharma</h3>
+          <img src="images/pic-1.jpg" class="image" alt="" />
+          <h3 class="name">Naman Jain</h3>
           <p class="role">Student</p>
           <a href="profile.html" class="btn">View Profile</a>
           <div class="flex-btn">
@@ -47,8 +47,8 @@
       </div>
 
       <div class="profile">
-        <img src="images/pic-2.jpg" class="image" alt="" />
-        <h3 class="name">Nancy Sharma</h3>
+        <img src="images/pic-1.jpg" class="image" alt="" />
+        <h3 class="name">Naman Jain</h3>
         <p class="role">Student</p>
         <a href="profile.html" class="btn">View Profile</a>
       </div>
