--- a/update.html
+++ b/update.html
@@ -34,8 +34,8 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-2.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <img src="images/pic-1.jpg" class="image" alt="">
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -55,8 +55,8 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-2.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <img src="images/pic-1.jpg" class="image" alt="">
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
@@ -78,7 +78,7 @@
    <form action="" method="post" enctype="multipart/form-data">
       <h3>update profile</h3>
       <p>update name</p>
-      <input type="text" name="name" placeholder="Nancy Sharma" maxlength="50" class="box">
+      <input type="text" name="name" placeholder="Naman Jain" maxlength="50" class="box">
       <p>update email</p>
       <input type="email" name="email" placeholder="shaikh@gmail.come" maxlength="50" class="box">
       <p>previous password</p>
@@ -96,7 +96,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2022 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2022 by <span>Naman Jain</span> | all rights reserved!
 
 </footer>
 
