--- a/watch-video.html
+++ b/watch-video.html
@@ -34,8 +34,8 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-2.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <img src="images/pic-1.jpg" class="image" alt="">
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -55,8 +55,8 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-2.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <img src="images/pic-1.jpg" class="image" alt="">
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">View Profile</a>
    </div>
@@ -85,7 +85,7 @@
          <p class="date"><i class="fas fa-heart"></i><span>44 likes</span></p>
       </div>
       <div class="tutor">
-         <img src="images/pic-2.jpg" alt="">
+         <img src="images/pic-7.jpg" alt="">
          <div>
             <h3>Naina</h3>
             <span>developer</span>
@@ -119,13 +119,13 @@
 
       <div class="box">
          <div class="user">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-1.jpg" alt="">
             <div>
-               <h3>Nancy Sharma</h3>
+               <h3>Naman Jain</h3>
                <span>22-02-2024</span>
             </div>
          </div>
-         <div class="comment-box">this is a comment form Nancy Sharma</div>
+         <div class="comment-box">this is a comment form Naman Jain</div>
          <form action="" class="flex-btn">
             <input type="submit" value="edit comment" name="edit_comment" class="inline-option-btn">
             <input type="submit" value="delete comment" name="delete_comment" class="inline-delete-btn">
@@ -134,7 +134,7 @@
 
       <div class="box">
          <div class="user">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-5.jpg" alt="">
             <div>
                <h3>Snehal</h3>
                <span>22-02-2024</span>
@@ -181,7 +181,7 @@
 
       <div class="box">
          <div class="user">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-5.jpg" alt="">
             <div>
                <h3>Snehal</h3>
                <span>22-02-2024</span>
@@ -199,7 +199,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2024 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2024 by <span>Naman Jain</span> | all rights reserved!
 
 </footer>
 
