--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-2.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <img src="images/pic-1.jpg" class="image" alt="">
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -58,8 +58,8 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-2.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <img src="images/pic-1.jpg" class="image" alt="">
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
@@ -139,9 +139,9 @@
       <div class="box">
          <p>"The interactive features make lessons engaging and fun for my students, and the analytics tools help me track their progress effortlessly. Highly recommended for educators looking to modernize their classrooms! "</p>
          <div class="Student">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-1.jpg" alt="">
             <div>
-               <h3>Nancy Sharma</h3>
+               <h3>Naman Jain</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -156,7 +156,7 @@
       <div class="box">
          <p> The variety of resources available ensures that my child never gets bored, and the personalized learning pathways have helped boost their confidence and grades significantly. It's like having a virtual tutor at home!</p>
          <div class="Student">
-            <img src="images/pic-1.jpg" alt="">
+            <img src="images/pic-4.jpg" alt="">
             <div>
                <h3>Shubham Sharma</h3>
                <div class="stars">
@@ -190,9 +190,9 @@
       <div class="box">
          <p>SkillMatrix exceeded my expectations with its easy-to-follow courses and supportive community. I've already acquired new skills that have opened up exciting career opportunities for me.Kudos to the SkillMatrix team!</p>
          <div class="Student">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-1.jpg" alt="">
             <div>
-               <h3>Nancy Sharma</h3>
+               <h3>Naman Jain</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -226,7 +226,7 @@
          <div class="Student">
             <img src="images/pic-7.jpg" alt="">
             <div>
-               <h3>Nancy Sharma</h3>
+               <h3>Snehal</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -241,7 +241,7 @@
 </section>
 
 <footer class="footer">
-   &copy; copyright @ 2024 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2024 by <span>Naman Jain</span> | all rights reserved!
 </footer>
 
 <script src="js/script.js"></script>
