--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,8 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-2.jpg" class="image" alt="">
-         <h3 class="name">Nancy</h3>
+         <img src="images/pic-1.jpg" class="image" alt="">
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -63,8 +63,8 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-2.jpg" class="image" alt="">
-      <h3 class="name">Nancy</h3>
+      <img src="images/pic-1.jpg" class="image" alt="">
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">View Profile</a>
    </div>
@@ -112,8 +112,8 @@
       <div class="box">
          <i class="fas fa-envelope"></i>
          <h3>email address</h3>
-         <a href="mailto:nancysharma2000a@gmail.com">nancysharma2000a@gmail.com</a>
-         <a href="mailto:nancysharma2000a@gmail.com  ">nancysharma2000a@gmail.com</a>
+         <a href="mailto:Naman Jainsharma2000a@gmail.com">Naman Jainsharma2000a@gmail.com</a>
+         <a href="mailto:Naman Jainsharma2000a@gmail.com  ">Naman Jainsharma2000a@gmail.com</a>
       </div>
 
       <div class="box">
@@ -125,7 +125,7 @@
 </section>
 
 <footer class="footer">
-   &copy; copyright @ 2024 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2024 by <span>Naman Jain</span> | all rights reserved!
 </footer>
 
 <script src="js/script.js"></script>
