--- a/home.html
+++ b/home.html
@@ -35,8 +35,8 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-2.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <img src="images/pic-1.jpg" class="image" alt="">
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">View Profile</a>
          <div class="flex-btn">
@@ -56,8 +56,8 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-2.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <img src="images/pic-1.jpg" class="image" alt="">
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">View Profile</a>
    </div>
@@ -142,7 +142,7 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-5.jpg" alt="">
             <div class="info">
                <h3>Snehal</h3>
                <span>21-02-2024</span>
@@ -246,7 +246,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2024 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2024 by <span>Naman Jain</span> | all rights reserved!
 
 </footer>
 
