--- a/playlist.html
+++ b/playlist.html
@@ -35,7 +35,7 @@
 
       <div class="profile">
          <img src="images/pic-1.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -56,7 +56,7 @@
 
    <div class="profile">
       <img src="images/pic-1.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
@@ -91,7 +91,7 @@
       </div>
       <div class="column">
          <div class="tutor">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-1.jpg" alt="">
             <div>
                <h3>John</h3>
                <span>21-02-2024</span>
@@ -156,7 +156,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2024 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2024 by <span>Naman Jain</span> | all rights reserved!
 
 </footer>
 
