--- a/profile.html
+++ b/profile.html
@@ -34,8 +34,8 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-2.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <img src="images/pic-1.jpg" class="image" alt="">
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -55,8 +55,8 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-2.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <img src="images/pic-1.jpg" class="image" alt="">
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
@@ -80,8 +80,8 @@
    <div class="info">
 
       <div class="user">
-         <img src="images/pic-2.jpg" alt="">
-         <h3>Nancy Sharma</h3>
+         <img src="images/pic-1.jpg" alt="">
+         <h3>Naman Jain</h3>
          <p>Student</p>
          <a href="update.html" class="inline-btn">update profile</a>
       </div>
@@ -128,7 +128,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2022 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2022 by <span>Naman Jain</span> | all rights reserved!
 
 </footer>
 
