--- a/register.html
+++ b/register.html
@@ -35,7 +35,7 @@
 
       <div class="profile">
          <img src="images/pic-1.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -56,7 +56,7 @@
 
    <div class="profile">
       <img src="images/pic-1.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
@@ -94,7 +94,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2022 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2022 by <span>Naman Jain</span> | all rights reserved!
 
 </footer>
 
