--- a/teachers.html
+++ b/teachers.html
@@ -35,8 +35,8 @@
       </div>
 
       <div class="profile">
-         <img src="images/pic-2.jpg" class="image" alt="">
-         <h3 class="name">Nancy Sharma</h3>
+         <img src="images/pic-1.jpg" class="image" alt="">
+         <h3 class="name">Naman Jain</h3>
          <p class="role">Student</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
@@ -62,8 +62,8 @@
    </div>
 
    <div class="profile">
-      <img src="images/pic-2.jpg" class="image" alt="">
-      <h3 class="name">Nancy Sharma</h3>
+      <img src="images/pic-1.jpg" class="image" alt="">
+      <h3 class="name">Naman Jain</h3>
       <p class="role">Student</p>
       <a href="profile.html" class="btn">view profile</a>
    </div>
@@ -99,9 +99,9 @@
 
       <div class="box">
          <div class="tutor">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-1.jpg" alt="">
             <div>
-               <h3>Snehal</h3>
+               <h3>Naman Jain</h3>
                <span>Developer</span>
             </div>
          </div>
@@ -201,7 +201,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2022 by <span>Ms. web designer</span> | all rights reserved!
+   &copy; copyright @ 2022 by <span>Naman Jain</span> | all rights reserved!
 
 </footer>
 
